[project]
name = "vault"
version = "0.1.0"
description = "A Self-Managed Encrypted File Vault for Removable Media"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "cryptography>=43.0.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.7",
]

[tool.ruff]
line-length = 100
